completed problem 4
